# 285191U013-IPFCE-assignment-9

./: CMakeLists.txt  README.md  dfs-test.c  dfs.c  dfs.h  search.c  search.h  sum.c  sum.h
include/: max.h  max_sum.h  swap.h
src/: max.c  max_sum.c  swap.c
tests/: tests.cpp
tests/src/: tests.cpp
